--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <a class="nav-link" href="#home">Home</a>
             <a class="nav-link" href="#about">About</a>
             <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#skills">Skills</a>
             <a class="nav-link" href="#contact">Contact</a>
           </div>
         </div>
@@ -56,7 +57,7 @@
           width="20%"
         />
         <h1 class="display-4">Fajar Ikhsanul Faaizin</h1>
-        <p class="lead">Website Programmer</p>
+        <p class="lead">Website Developer</p>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -70,16 +71,12 @@
     <section id="about">
       <div class="container">
         <h2 class="text-center mb-4">About Me</h2>
-        <div class="row justify-content-center">
-          <div class="col-6">
-            <p class="mx-auto">
-              Halo, Saya merupakan seorang website developer yang memiliki
-              keahlian dalam menggunakan bahasa pemrograman PHP (CodeIgniter),
-              Javascript (jQuery, AJAX), dan SQL. Saya juga memiliki kemampuan
-              bekerja sama dan komunikasi yang baik.
-            </p>
-          </div>
-        </div>
+        <p class="mx-auto" style="width: 50%">
+          Hai, I am a hardworking website developer who loves to find solutions
+          in the least amount of time. I have developed an e-commerce website,
+          point of sale (POS) webapp, and car renting webapp. I am a good
+          communicator and am able to work independently and also in a team.
+        </p>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -94,7 +91,7 @@
       <h2 class="text-center mb-5">My Projects</h2>
       <div class="row justify-content-center">
         <div class="col-md-2 mt-4">
-          <div class="card" style="min-height: 294px">
+          <div class="card mx-auto" style="width: 18rem">
             <img
               src="src/img/project1.png"
               class="card-img-top"
@@ -104,8 +101,8 @@
             <div class="card-body">
               <h5 class="card-title">Website Kasir</h5>
               <p class="card-text" style="min-height: 96px">
-                Aplikasi kasir berbasis website yang dibangun dengan menggunakan
-                framework CodeIgniter 4.
+                A Point Of Sale (POS) website application developed with
+                CodeIgniter 4, jQuery, AJAX, etc.
               </p>
               <a
                 href="https://fajarikhsan.000webhostapp.com"
@@ -116,7 +113,7 @@
           </div>
         </div>
         <div class="col-md-2 mt-4">
-          <div class="card" style="min-height: 294px">
+          <div class="card mx-auto" style="width: 18rem">
             <img
               src="src/img/project2.png"
               class="card-img-top"
@@ -126,8 +123,8 @@
             <div class="card-body">
               <h5 class="card-title">Website Online Shop</h5>
               <p class="card-text" style="min-height: 96px">
-                Aplikasi Online Shop sederhana yang dibangun dengan menggunakan
-                framework CodeIgniter 3.
+                An E-Commerce website application developed with CodeIgniter 3,
+                jQuery, AJAX, etc.
               </p>
               <a
                 href="https://easycareerwebsite.000webhostapp.com"
@@ -138,7 +135,7 @@
           </div>
         </div>
         <div class="col-md-2 mt-4">
-          <div class="card" style="min-height: 294px">
+          <div class="card mx-auto" style="width: 18rem">
             <img
               src="src/img/github.png"
               class="card-img-top"
@@ -147,7 +144,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">My Github</h5>
-              <p class="card-text" style="min-height: 96px">Halaman github.</p>
+              <p class="card-text" style="min-height: 96px">My Github page.</p>
               <a
                 href="https://github.com/fajarikhsan"
                 class="stretched-link"
@@ -166,24 +163,84 @@
       </svg>
     </section>
 
-    <section id="contact">
+    <section id="skills">
       <div class="container">
-        <h2 class="text-center mb-5">Contact</h2>
-        <div class="row justify-content-center mt-2">
-          <div class="col-1"><i class="fas fa-user"></i></div>
-          <div class="col-3">Fajar Ikhsanul Faaizin</div>
+        <h2 class="text-center mb-5">My Expertise Area</h2>
+        <div class="row justify-content-center align-items-center mt-4">
+          <div class="col-md-3 text-center">
+            <div class="imgContainer mx-auto">
+              <img src="src/img/html.png" alt="" width="100%" />
+            </div>
+            <p class="fw-bold">HTML</p>
+            <p class="fw-lighter">4 Years Experience</p>
+          </div>
+          <div class="col-md-3 text-center">
+            <div class="imgContainer mx-auto">
+              <img src="src/img/javascript.png" alt="" width="100%" />
+            </div>
+            <p class="fw-bold">Javascript</p>
+            <p class="fw-lighter">2 Years Experience</p>
+          </div>
+          <div class="col-md-3 text-center">
+            <div class="imgContainer mx-auto">
+              <img src="src/img/css.png" alt="" width="100%" />
+            </div>
+            <p class="fw-bold">CSS</p>
+            <p class="fw-lighter">3 Years Experience</p>
+          </div>
+          <div class="col-md-3 text-center">
+            <div class="imgContainer mx-auto">
+              <img src="src/img/php.png" alt="" width="100%" />
+            </div>
+            <p class="fw-bold">PHP</p>
+            <p class="fw-lighter">4 Years Experience</p>
+          </div>
         </div>
-        <div class="row justify-content-center mt-2">
-          <div class="col-1"><i class="fas fa-envelope"></i></div>
-          <div class="col-3">fajarikhsan3@gmail.com</div>
-        </div>
-        <div class="row justify-content-center mt-2">
-          <div class="col-1"><i class="fab fa-whatsapp"></i></div>
-          <div class="col-3">+6285155302203</div>
-        </div>
-        <div class="row justify-content-center mt-2">
-          <div class="col-1"><i class="fab fa-instagram"></i></div>
-          <div class="col-3">@rajafikhsan</div>
+        <div class="row justify-content-center align-items-center mt-4">
+          <div class="col-md-3 text-center">
+            <div class="imgContainer mx-auto">
+              <img src="src/img/jquery.png" alt="" width="100%" />
+            </div>
+            <p class="fw-bold">jQuery</p>
+            <p class="fw-lighter">2 Years Experience</p>
+          </div>
+          <div class="col-md-3 text-center">
+            <div class="imgContainer mx-auto">
+              <img src="src/img/mysql.png" alt="" width="100%" />
+            </div>
+            <p class="fw-bold">MySQL</p>
+            <p class="fw-lighter">2 Years Experience</p>
+          </div>
+          <div class="col-md-3 text-center">
+            <div class="imgContainer mx-auto">
+              <img src="src/img/codeigniter.png" alt="" width="100%" />
+            </div>
+            <p class="fw-bold">CodeIgniter</p>
+            <p class="fw-lighter">1 Year Experience</p>
+          </div>
+          <div class="col-md-3 text-center">
+            <div class="imgContainer mx-auto">
+              <img src="src/img/bootstrap.png" alt="" width="100%" />
+            </div>
+            <p class="fw-bold">Bootstrap</p>
+            <p class="fw-lighter">2 Years Experience</p>
+          </div>
+          <div class="row justify-content-center align-items-center mt-4">
+            <div class="col-md-3 text-center">
+              <div class="imgContainer mx-auto">
+                <img src="src/img/bulma.png" alt="" />
+              </div>
+              <p class="fw-bold">Bulma</p>
+              <p class="fw-lighter">2 Months Experience</p>
+            </div>
+            <div class="col-md-3 text-center">
+              <div class="imgContainer mx-auto">
+                <img src="src/img/materialize.png" alt="" width="100%" />
+              </div>
+              <p class="fw-bold">Materialize</p>
+              <p class="fw-lighter">2 Months Experience</p>
+            </div>
+          </div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -195,8 +252,32 @@
       </svg>
     </section>
 
+    <section id="contact">
+      <div class="container">
+        <h2 class="text-center mb-5">Contact</h2>
+        <table class="mx-auto">
+          <tr>
+            <td width="20%"><i class="fas fa-user"></i></td>
+            <td width="90%">Fajar Ikhsanul Faaizin</td>
+          </tr>
+          <tr>
+            <td><i class="fas fa-envelope mr-5"></i></td>
+            <td>fajarikhsan3@gmail.com</td>
+          </tr>
+          <tr>
+            <td><i class="fab fa-whatsapp"></i></td>
+            <td>+6285155302203</td>
+          </tr>
+          <tr>
+            <td><i class="fab fa-instagram"></i></td>
+            <td>@rajafikhsan</td>
+          </tr>
+        </table>
+      </div>
+    </section>
+
     <section id="footer" class="pb-4">
-      <p class="text-center">Website ini dibuat oleh Fajar Ikhsanul Faazin</p>
+      <p class="text-center">Created by Fajar Ikhsanul Faazin</p>
     </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
