--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
             />
             <div class="card-body">
               <h5 class="card-title">Website Kasir</h5>
-              <p class="card-text" style="min-height: 96px">
+              <p class="card-text" style="min-height: 145px">
                 A Point Of Sale (POS) website application developed with
-                CodeIgniter 4, jQuery, AJAX, etc.
+                CodeIgniter 4, jQuery, AJAX, etc. login : (user: admin,
+                password: admin).
               </p>
               <a
                 href="https://fajarikhsan.000webhostapp.com"
@@ -122,9 +123,10 @@
             />
             <div class="card-body">
               <h5 class="card-title">Website Online Shop</h5>
-              <p class="card-text" style="min-height: 96px">
+              <p class="card-text" style="min-height: 145px">
                 An E-Commerce website application developed with CodeIgniter 3,
-                jQuery, AJAX, etc.
+                jQuery, AJAX, etc. login : (email: fajarikhsan3@gmail.com,
+                password: 1234)
               </p>
               <a
                 href="https://easycareerwebsite.000webhostapp.com"
@@ -144,7 +146,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">My Github</h5>
-              <p class="card-text" style="min-height: 96px">My Github page.</p>
+              <p class="card-text" style="min-height: 145px">My Github page.</p>
               <a
                 href="https://github.com/fajarikhsan"
                 class="stretched-link"
