--- a/index.html
+++ b/index.html
@@ -72,10 +72,7 @@
       <div class="container">
         <h2 class="text-center mb-4">About Me</h2>
         <p class="mx-auto" style="width: 70%">
-          Hai, I am a hardworking website developer who loves to find solutions
-          in the least amount of time. I have developed an e-commerce website,
-          point of sale (POS) webapp, and car renting webapp. I am a good
-          communicator and am able to work independently and also in a team.
+          As a programming enthusiast, I find immense joy in solving complex coding problems and building robust systems. My proficiency in PHP with CodeIgniter and Laravel frameworks, coupled with expertise in JavaScript, jQuery, AJAX, MySQL, and CSS with Bootstrap framework, has enabled me to build multiple systems with ease. Nothing is more fulfilling to me than finding innovative solutions to programming challenges and creating top-notch products. I am passionate about staying up-to-date with the latest trends and technologies in the industry to continuously improve my skills and produce cutting-edge solutions. I am confident that my strong programming skills and unwavering dedication to excellence make me a valuable asset to any team seeking a skilled and experienced developer. Let's connect and explore opportunities to work together on exciting projects that challenge and inspire us.
         </p>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
