--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 password: 1234)
               </p>
               <a
-                href="https://easycareerwebsite.000webhostapp.com"
+                href="https://careerfajar.000webhostapp.com/"
                 class="stretched-link"
                 target="_blank"
               ></a>
