--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 password: admin).
               </p>
               <a
-                href="https://fajarikhsan.000webhostapp.com"
+                href="https://cashier.fajarikhsan.com"
                 class="stretched-link"
                 target="_blank"
               ></a>
