--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="refresh" content="0; URL=https://fajarikhsan.com/">
+    <link rel="canonical" href="https://fajarikhsan.com/">
 
     <!-- Bootstrap CSS -->
     <link
